Bug 251586. Allow a scrollbar to appear whenever it fits, even if the resulting visible size is zero. r+sr=dbaron,a=asa